--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
     <!-- mi codigo JS -->
 
-    <script src="/Proyecto JavaScript con tema/js/new1.js"></script>
+    <script src="js/new1.js"></script>
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <!-- * *                               SB Forms JS                               * *-->
     <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
